# hijax

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
hijax/: __init__.py  abstract_worker.py  jit_method.py  loaders.py  worker.py
hijax/setup/: __init__.py  setup_loaders.py  setup_worker.py
hijax/utils/: __init__.py  recursive_set.py
